fix(ui): Fix selection handles are visible while creating the selection

--- a/packages/js-draw/src/tools/SelectionTool/SelectionTool.scss
+++ b/packages/js-draw/src/tools/SelectionTool/SelectionTool.scss
@@ -121,6 +121,10 @@
 		&.-empty {
 			opacity: 0;
 		}
+
+		&.-hide-handles .selection-tool-handle {
+			display: none;
+		}
 	}
 }
 
